--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
   Build-Kernel:
     name: "🐎 Build kernel"
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs:
       - Set-repos
     strategy:
@@ -50,13 +50,30 @@ jobs:
       DEFCONFIG_NAME: ${{ matrix.repos.kernelSource.defconfig }}
 
       withKernelSU: ${{ matrix.repos.withKernelSU }}
+      ccache: ${{ matrix.repos.ccache }}
       useAnykernel: ${{ matrix.repos.AnyKernel3.use }}
       release: ${{ matrix.repos.AnyKernel3.release }}
     steps:
       - name: "⭐ Install prerequisites"
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential bc curl git zip ftp gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi libssl-dev lftp zstd wget libfl-dev python2 python3 libarchive-tools
+          sudo apt-get install -y build-essential bc curl git zip ftp gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi libssl-dev lftp zstd wget libfl-dev python2 python3 libarchive-tools ccache
+
+      - name: "🚄 Create cache key from `repos`"
+        if: ${{ env.ccache == 'true' }}
+        id: ccache_key
+        run: |
+          ccache -o compression=false -o cache_dir=$HOME/.ccache
+          echo "CACHE_KEY=$(echo -n '${{ toJSON(matrix.repos) }}' | base64 -w 0 | cut -c -48)" >> $GITHUB_OUTPUT
+  
+      - name: "🚅 Cache ccache files"
+        if: ${{ env.ccache == 'true' }}
+        uses: actions/cache@v3
+        with:
+          path: ~/.ccache
+          key: ccache-${{ env.KERNEL_NAME }}-${{ steps.ccache_key.outputs.CACHE_KEY }}-${{ env.builddate }}
+          restore-keys: |
+            ccache-${{ env.KERNEL_NAME }}-${{ steps.ccache_key.outputs.CACHE_KEY }}-${{ env.builddate }}
 
       - name: "⏰ Setup Anykernel3"
         env:
@@ -112,12 +129,16 @@ jobs:
             args="$args ARCH=$ARCH"
           fi
           if [ -n "$CC" ]; then
-            args="$args CC=${{ env.WORKSPACE }}/$CC"
+            if [ ${{ env.ccache }} = true ]; then
+              args="$args CC=\"ccache ${{ env.WORKSPACE }}/$CC\""
+              # echo "CC=ccache ${{ env.WORKSPACE }}/$CC" >> $GITHUB_ENV
+            else
+              args="$args CC=${{ env.WORKSPACE }}/$CC"
+            fi
           fi
           while read -r externalCommand; do
             args="$args $externalCommand"
           done < <(jq -r '.externalCommand | to_entries[] | "\(.key)=${{ env.WORKSPACE }}/\(.value)"' <<< "$params")
-
 
           echo "🤔 $args"
           echo "ARCH=$ARCH" >> $GITHUB_OUTPUT
@@ -159,7 +180,7 @@ jobs:
           args: ${{ steps.generate-args.outputs.args }}
         run: |
           echo "PATH Variable: $PATH"
-          make ${args}
+          make ${{ env.args }}
 
       - name: "💛 Upload Image"
         uses: actions/upload-artifact@v3
